<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/mylayout"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:background="#C4242424">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/ins"
        android:textSize="24sp"
        android:padding="8dp"
        android:background="#424242"
        android:textColor="@android:color/background_light"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:layout_alignRight="@+id/title"
        android:background="@drawable/ic_exit_to_app_black_24dp"
        android:layout_marginBottom="12dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        style="@style/myActionButtonStyle"
        android:layout_alignParentEnd="true"
        android:id="@+id/closePopupBtn"
        android:layout_marginEnd="8dp"
        android:layout_alignEnd="@+id/title"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_below="@+id/closePopupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ins1"
        android:text="@string/ins1"
        android:background="@android:color/transparent"
        android:layout_margin="12dp"
        android:textSize="24sp"
        android:textColor="#ffffff"/>

    <TextView
        android:layout_below="@+id/ins1"
        android:layout_width="wrap_content"
        android:id="@+id/ins2"
        android:layout_margin="12dp"
        android:layout_height="wrap_content"
        android:text="@string/ins2"
        android:textSize="24sp"
        android:textColor="#ffffff"/>

    <TextView
        android:layout_below="@+id/ins2"
        android:layout_width="wrap_content"
        android:id="@+id/ins3"
        android:layout_margin="12dp"
        android:layout_height="wrap_content"
        android:text="@string/ins3"
        android:textSize="24sp"
        android:textColor="#ffffff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ins3"
        android:textColor="#ffffff"
        android:id="@+id/dec"
        android:layout_margin="12dp"
        android:text="@string/dec"
        android:textSize="24sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ins3"
        android:digits="0123456789."
        android:layout_toEndOf="@+id/dec"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textColorHighlight="#ffffff"
        android:textSize="24sp"
        android:ems="10"
        android:id="@+id/innput"
        android:singleLine="true"
        android:inputType="numberDecimal"
        android:layout_toRightOf="@+id/dec"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dec"
        android:textColor="#ffffff"
        android:layout_margin="12dp"
        android:textSize="24sp"
        android:id="@+id/bintext"
        android:text="@string/bin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/bintext"
        android:layout_toRightOf="@id/bintext"
        android:layout_below="@id/dec"
        android:textColor="#ffffff"
        android:layout_margin="12dp"
        android:id="@+id/displaydecimal"
        android:text="@string/Number0"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/displaydecimal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textAllCaps="true"
        android:padding="8dp"
        android:textColor="#ffffff"
        android:text="calculate"
        android:background="@android:color/background_dark"/>

</RelativeLayout>