<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    tools:context=".MainActivity">

    <include
        layout="@layout/toolbar"
        android:id="@+id/Toolbar">

    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="50dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:src="@mipmap/culogo"
            android:contentDescription="@string/logo" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:lineSpacingExtra="8dp"
            android:layout_weight="1"
            android:background="#424242"
            android:layout_marginBottom="10dp"
            android:textColor="#FFFFFF"
            android:text="@string/Button1_AC"
            android:id="@+id/arithmatic"/>

        <Button
            android:textColor="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="#424242"
            android:layout_weight="1"
            android:lineSpacingExtra="8dp"
            android:text="@string/Button2_LC"
            android:id="@+id/logical"/>

    </LinearLayout>

</RelativeLayout>